<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/different_way_to_add_custom_dialog"
        style="@style/main_style" 
        android:id="@+id/welcomeTextView"
        
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/btnLinerlayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_way_1"
            android:layout_weight="1"
            android:id="@+id/btnWay1"
            style="@style/main_style"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/custom_dialog_way_2"
            android:id="@+id/btnWay2"
            style="@style/main_style"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/custom_dialog_way_3"
            android:id="@+id/btnWay3"
            style="@style/main_style"

            />


    </LinearLayout>
    

</LinearLayout>